First marketing draft

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Better Healthcare Now !</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -115,7 +115,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">HealthChoice</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -136,14 +136,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Healthcare Choice</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">The place to help you choose a local healthcare provider based on out-of-pocket cost of healthcare.</p> 
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -160,19 +160,19 @@
               media queries. -->
               <div class="span4">
                 <div class="linediv-l">
-                  <h3>1000</h3>
+                  <h3>0</h3>
                   <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>6000</h3>
-                  <p>of $10,000</p>
+                  <h3>0</h3>
+                  <p>of $50,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3>
+                  <h3>40</h3>
                   <p>days left</p>
                 </div>
               </div>
@@ -182,13 +182,18 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 0%;"></div>
+              <div class="bar bar-warning" style="width: 100%;"></div>
             </div>
-            <div class="span6 offset3 order">
+            <div class="span12 order">
               <!-- Standard Bootstrap button. -->
               <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-              <button class="btn btn-success btn-large">Preorder</button>
+              <div class="span6">
+                <button class="btn btn-success btn-large">Donate to the Cause</button>
+              </div>
+              <div class="span6">
+                <button class="btn btn-success btn-large">Request / Vote on Features</button>
+              </div>
             </div>
             <div class="span8 offset2 social">
               <!-- Social buttons are not included in default Bootstrap. -->
@@ -210,7 +215,13 @@
         </div>
         <div class="span5 copy">
           <p>
-            Marketing copy here
+            Have you ever wondered if you can afford to see a doctor about that terrible cough?
+            Or how much you will have to pay after your insurance kicks in?
+            If so, then this is the site for you! Search your local healhcare providers. 
+            See what your insurance is not going to cover. 
+            Find if paying out-of-pocket will be cheaper.
+            Determine if you should dispute the charges.
+            And when you do get the bill, tell us what you paid to improve the price predictions.
           </p>
         </div>
       </div>
