--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
       .footer a {
         color: #ccccff;
       }
+        /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+      div.addthis_toolbox {
+        width:180px;
+        margin: 0 auto;
+      }
     </style>
   </head>
   <body>
@@ -191,11 +196,11 @@
             </div>
             <div class="row-fluid">
               <div class="span12">
-                  <div class="span2 offset1 order">
-                    <!-- Standard Bootstrap button. -->
-                    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                    <button class="btn btn-success btn-large">Contribute</button>
-                  </div>
+                <div class="span2 offset1 order">
+                  <!-- Standard Bootstrap button. -->
+                  <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+                  <button class="btn btn-success btn-large">Contribute</button>
+                </div>
                 <div class="span8 offset1 order">
                   <button class="btn btn-success btn-large">Request / Vote on Features</button>
                 </div>
@@ -203,10 +208,15 @@
             </div>
             <div class="row-fluid">
               <div class="span8 offset2 social">
-                <!-- Social buttons are not included in default Bootstrap. -->
-                <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-                <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-                <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                  <a class="addthis_button_preferred_1"></a>
+                  <a class="addthis_button_preferred_2"></a>
+                  <a class="addthis_button_compact"></a>
+                </div>
+                <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5202f9b12504ddda"></script>
+                <!-- AddThis Button END -->
               </div>
             </div>
           </div>
@@ -293,5 +303,15 @@
         </div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-43029380-1', 'herokuapp.com');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
